--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,9 +1,28 @@
+body {
+  font-family: Arial Black;
+}
+
 header {
-  background-color: #BF0D0D;
+  background-color: #820505;
   color: white;
   font-size: 36;
-  font-family: Arial Black;
   padding-top: 20px;
   padding-left: 20px;
   height: 75px;
+}
+
+nav {
+  background-color: #4A4444;
+  text-align: right;
+  height: 40px;
+  padding-top: 15px
+}
+
+.navlink {
+  color: white;
+  padding: 10px;
+}
+
+section {
+  width: 1440px;
 }
